adds super rainbow effects

--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -5,10 +5,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-resource.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
 <script src="/assets/app.js"></script>
+<link rel="stylesheet" href="/assets/styles.css">
 <base href="/" />
 </head>
 <body data-ng-app="SecretMagicApp">
-<pre id="grad1">
+<pre class="rainbow" id="grad1">
 
                                  ,|
                                //|                              ,|
